DOCS Added references to jlink